--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: "2.1"
 
 services:
+  # ------------------------------------------------------------------------------------
+  # FlowFuse Device Agent
+  # ------------------------------------------------------------------------------------
   devagent:
     build:
-      context: .
+      context: ./device-agent
     restart: always
     network_mode: host
     privileged: true
@@ -11,6 +14,22 @@ services:
       - "1880:1880"
     volumes:
       - ff-device:/opt/flowfuse-device
+  
+  # ------------------------------------------------------------------------------------
+  # Influxdb
+  # ------------------------------------------------------------------------------------
+  influxdb:
+    image: influxdb:1.7.11
+    restart: unless-stopped
+    ports:
+        - '8086'
+    volumes:
+        - influxdb-data:/var/lib/influxdb
+        - influxdb-etc:/etc/influxdb
+
+
 
 volumes:
   ff-device:
+  influxdb-data:
+  influxdb-etc:
